--- a/src/pages/Main/Content/Timer/Timer.css
+++ b/src/pages/Main/Content/Timer/Timer.css
@@ -4,6 +4,12 @@
     text-align: center;
     font-size: 60px;
 }
-.timerDescription{
+.timerValueString{
     font-size: 40px;
+}
+.timerDescription{
+    font-size: 12px;
+}
+.timerTime{
+    margin-top: 10px;
 }
